--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      // var vConsole = new VConsole();
+      var vConsole = new VConsole();
     </script>
   </body>
 </html>
